@@ -282,7 +282,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xms1g -Xmx1g</argLine>
+                    <argLine>-Xms256m -Xmx1g -XX:PermSize=512m</argLine>
                 </configuration>
             </plugin>
         </plugins>
